<resources>
    <string name="app_name">Foody</string>

    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorites</string>
    <string name="food_joke">Jokes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main course</string>
    <string name="whole30">Whole30</string>
    <string name="primal">Primal</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="diet_type">Diet Type</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="paleo">Paleo</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="save_to_favorites">Save to favorites</string>
    <string name="no_favorites_recipes">No favorites recipes</string>
    <string name="delete_favorite_menu">Delete favorite menu</string>
    <string name="delete_all">Delete all</string>
    <string name="share">Share</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
</resources>